--- a/engine/index.html
+++ b/engine/index.html
@@ -72,18 +72,18 @@
 		<!-- Third Party CSS Libraries -->
 
 		<!-- Monogatari CSS Libraries -->
-		<link rel="stylesheet" href="./engine/core/monogatari.css">
-		<link rel="stylesheet" href="./style/main.css">
+		<link rel="stylesheet" href="engine/core/monogatari.css">
+		<link rel="stylesheet" href="style/main.css">
 
 		<!-- Third Party JavaScript Libraries -->
 
 		<!-- Monogatari JavaScript Libraries -->
-		<script src="./engine/debug/debug.js"></script>
-		<script src="./engine/core/monogatari.js"></script>
-		<script src="./js/options.js"></script>
-		<script src="./js/storage.js"></script>
-		<script src="./js/script.js"></script>
-		<script src="./js/main.js"></script>
+		<script src="engine/debug/debug.js"></script>
+		<script src="engine/core/monogatari.js"></script>
+		<script src="js/options.js"></script>
+		<script src="js/storage.js"></script>
+		<script src="js/script.js"></script>
+		<script src="js/main.js"></script>
 
 	</head>
 
